[package]
name = "darknet-rs"
version = "0.1.0"
authors = ["Tiberio D A R Ferreira <tiberiusferreira@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

failure = "0.1.6"

tch = "0.3"
imageproc = "0.22.0"
image = "0.23.12"
rocket = {version = "0.4.2", default-features=false}
rocket_contrib = "0.4.2"
base64 = "0.11.0"
reqwest = { version = "0.10.9", features = ["blocking"] }
serde = {version = "*", features=["derive"]}
serde_json = "*"
chrono = "0.4.10"